vault/ingress-interal-gcp.yaml
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
    cloud.google.com/load-balancer-type: "Internal"
   # First get the static internal ip with the command
   # gcloud compute addresses create vault-internal-ip --region=us-west1 --subnet=your-private-subnet --purpose=SHARED_LOADBALANCER_VIP
    kubernetes.io/ingress.regional-static-ip-name: "vault-internal-ip"
    networking.gke.io/v1beta1.FrontendConfig: "vault-frontend-config"
    cloud.google.com/backend-config: '{"default": "vault-backend-config"}'
spec:
  rules:
    - host: vault.abc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
